--- a/frontend/src/Css/AddToDo.css
+++ b/frontend/src/Css/AddToDo.css
@@ -1,16 +1,21 @@
-section{
-display: grid;
-grid-template-columns: 10fr 1fr;
-padding: 2px;
+section {
+    margin-top: 10px;
+    display: grid;
+    grid-template-columns: 10fr 1fr;
+    padding: 2px;
 }
-input{
 
+input {
+    border-radius: 20px;
+    border-color: lightgray;
+    border-style: solid;
     width: 96%;
     padding: 1px 20px;
     margin: 2px 0;
     box-sizing: border-box;
 }
-.add_button{
+
+.add_button {
     padding: 1.3em 3em;
     font-size: 12px;
     text-transform: uppercase;
@@ -25,7 +30,8 @@ input{
     cursor: pointer;
     outline: none;
 }
-.add_button:hover{
+
+.add_button:hover {
     background-color: #0097ef;
     box-shadow: 0px 15px 20px rgba(7, 224, 255, 0.4);
     color: #fff;
