--- a/frontend/src/Css/Header.css
+++ b/frontend/src/Css/Header.css
@@ -8,4 +8,12 @@ header {
     border :1px solid black;
 
 }
+.header_overlay{
 
+    width: 100%;
+    height: 50%;
+    padding: 50px;
+    color: #FFF;
+    text-shadow: 1px 1px 1px #333;
+    background-image: linear-gradient( 135deg, rgba(0, 228, 255, 0.41) 10%, rgba(255, 0, 24, 0.42) 100%);
+}
