--- a/frontend/src/Css/ToDoCard.css
+++ b/frontend/src/Css/ToDoCard.css
@@ -12,7 +12,7 @@ article {
 }
 article:hover{
     background-color: #f2f2f2;
-    box-shadow: 0px 15px 20px rgba(161, 161, 161, 0.4);
+    box-shadow: 0 15px 20px rgba(161, 161, 161, 0.4);
     transform: translateY(-7px);
 }
 
