--- a/frontend/src/Css/AddToDo.css
+++ b/frontend/src/Css/AddToDo.css
@@ -14,6 +14,11 @@ input {
     margin: 2px 0;
     box-sizing: border-box;
 }
+input:focus{
+    outline: none !important;
+    border-color: #bebebe;
+
+}
 
 .add_button {
     padding: 1.3em 3em;
@@ -32,8 +37,8 @@ input {
 }
 
 .add_button:hover {
-    background-color: #0097ef;
-    box-shadow: 0px 15px 20px rgba(7, 224, 255, 0.4);
+    background-color: #0379bd;
+    box-shadow: 0 15px 20px rgba(7, 224, 255, 0.4);
     color: #fff;
-    transform: translateY(-7px);
+    transform: translateY(-5px);
 }
