--- a/frontend/src/Css/ToDoCard.css
+++ b/frontend/src/Css/ToDoCard.css
@@ -29,6 +29,7 @@ article:hover{
     border: 1px solid #d9d9d9;
     outline: none;
     transition: 1s ease-in-out;
+    border-radius: 10px;
 }
 
 .update_button:hover {
@@ -47,6 +48,7 @@ article:hover{
     border: 1px solid #d9d9d9;
     outline: none;
     transition: 1s ease-in-out;
+    border-radius: 10px;
 }
 
 .delete_button:hover {
